# shadow-scraper

./: .gitignore  README.md  pyproject.toml
debug/: test.py
deploy/: deploy-vm.sh  deploy.sh  shadow-executor.service  shadow-scraper.service  victoria-metrics.service  weather-cycle.service  weather-cycle.timer
docs/: weather-bot.md
src/executor/: config.yaml  main.py  metrics.py  order.py  redeemer.py  signal.py  store.py
src/scraper/: config.yaml  main.py  market.py  schema.py  utils.py  writer.py
src/scraper/exchanges/: binance.py  bybit.py  coinbase.py  kraken.py  okx.py
src/scraper/polymarket/: stream.py
src/shadow/: binance_kline.py  clickhouse_writer.py  config.py  execution.py  leaders.py  main.py  markets.py  position_book.py  redeemer.py  risk.py  state_sync.py  strategy.py  telemetry.py  types.py  ws_activity.py
src/weather/: main.py
src/weather/calibration/: wunderground.py
src/weather/discovery/: polymarket.py
src/weather/executor/: order.py
src/weather/forecast/: openmeteo.py
src/weather/portfolio/: sizer.py
src/weather/pricer/: fv.py
src/weather/store/: db.py
